# protoduneana

./: CMakeLists.txt  README.md
protoduneana/: CMakeLists.txt
protoduneana/PDK/: .gitignore  Analyser.h  EventSelector.h  MakeFile  NDKAna.h  NDKAnaKsearch_module.cc  README  Template_PIDloglike_range.cpp  newplotter.C
protoduneana/PDK/BDT/: MakeFile_OG  createBDTinput.C  runMVA.C  trimTree.C
protoduneana/PDK/PDK_test/: CMakeLists.txt  EventDisplay.h  Limits.h  NDKAna.cpp  NDKAnaKsearch_module.cc  NDKAna_info  NDKAnalysis_wHitReco_wPandoraReco_wTruthMatching.fcl  NDKAnalysis_wHitReco_wPandoraReco_wTruthMatching_cheated.fcl  Processor.h  README_General  ndk_test1  newplotter.C  plotter.C
protoduneana/PDK/PDK_test/BDT/: BDTTree.h  MakeFile_Template  plotLLratio.C  plotLLratio_wire.C  plotter.C  plotter2.C
protoduneana/PDK/PDK_test/misc/: EventSelector_2plane_bestplanecut.h  EventSelector_3plane_bestplanecut.h  EventSelector_Trim.h  basic_plots.C  plotterDivide.C
protoduneana/PDK/misc/: EventSelector_3plane.h  NDKAnaKsearch_module.cc  Template_PIDloglike_range_Modified.cpp
protoduneana/Utilities/: CMakeLists.txt  G4RWExampleAnalyzer.fcl  G4RWExampleAnalyzer_module.cc  ProtoDUNECalibration.cxx  ProtoDUNETrackUtils.cxx
protoduneana/dualphase/checks/: pddp_dqdxcheck.fcl
protoduneana/singlephase/: CMakeLists.txt
protoduneana/singlephase/Analysis/: PDSPAnalyzer_module.cc  PDSPMisalignment.fcl  PDSPMisalignment_module.cc  pdsp_misalignment_job.fcl
protoduneana/singlephase/EMTaskForce/: DUNEPizeroAnaTree.fcl  DUNEPizeroAnaTree_module.cc  (+2 more)
ups/: product_deps
(+124 files in other folders)
